--- a/src/main/resources/fxml/CustomerTableView.fxml
+++ b/src/main/resources/fxml/CustomerTableView.fxml
@@ -8,28 +8,28 @@
 <?import java.util.HashMap?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.CustomerTableViewController"
+            fx:controller="de.htwsaar.prog3.carrental.controller.table.CustomerTableViewController"
             onKeyPressed="#handleKeyEvent"
             stylesheets="@styles.css">
     <fx:define>
         <HashMap fx:id="searchComboBoxFieldStrings"
-                 id="%customer-id-label"
-                 firstName="%customer-first-name-label"
-                 lastName="%customer-last-name-label"
-                 dateOfBirth="%customer-date-of-birth-label"
-                 emailAddress="%customer-email-label"
-                 phoneNumber="%customer-phone-number-label"
-                 street="%customer-street-label"
-                 houseNumber="%customer-house-number-label"
-                 zipCode="%customer-zip-code-label"
-                 city="%customer-city-label"
-                 idNumber="%customer-id-number-label"
-                 driverLicenseId="%customer-driver-license-id-label"/>
+                 id="%customer.label.id"
+                 firstName="%customer.label.first-name"
+                 lastName="%customer.label.last-name"
+                 dateOfBirth="%customer.label.date-of-birth"
+                 emailAddress="%customer.label.email"
+                 phoneNumber="%customer.label.phone-number"
+                 street="%customer.label.street"
+                 houseNumber="%customer.label.house-number"
+                 zipCode="%customer.label.zip-code"
+                 city="%customer.label.city"
+                 idNumber="%customer.label.id-number"
+                 driverLicenseId="%customer.label.driver-license-id"/>
     </fx:define>
     <fx:define>
         <HashMap fx:id="searchComboBoxComparatorStrings"
-                 equals="%search-combobox-equals"
-                 like="%search-combobox-like"/>
+                 equals="%search.operator.equals"
+                 like="%search.operator.contains"/>
     </fx:define>
     <top>
         <GridPane>
@@ -42,26 +42,26 @@
             </columnConstraints>
             <!-- Row 0 -->
             <MenuBar GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="5">
-                <Menu text="%menubar-view-file">
-                    <MenuItem text="%menubar-operation-cars" onAction="#handleCarMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-customers" onAction="#handleCustomerMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-employees" onAction="#handleEmployeeMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-rentals" onAction="#handleRentalMenuItemClicked"/>
+                <Menu text="%menubar.file">
+                    <MenuItem text="%menubar.file.cars" onAction="#handleCarMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.customers" onAction="#handleCustomerMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.employees" onAction="#handleEmployeeMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.rentals" onAction="#handleRentalMenuItemClicked"/>
                     <SeparatorMenuItem/>
-                    <MenuItem text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.close" onAction="#handleCloseMenuItemClicked"/>
                 </Menu>
-                <Menu text="%menubar-view-edit">
-                    <MenuItem text="%menubar-operation-new" onAction="#handleNewClicked"/>
-                    <MenuItem text="%menubar-operation-edit" onAction="#handleEditClicked"/>
-                    <MenuItem text="%menubar-operation-delete" onAction="#handleDeleteClicked"/>
+                <Menu text="%menubar.edit">
+                    <MenuItem text="%menubar.edit.new" onAction="#handleNewClicked"/>
+                    <MenuItem text="%menubar.edit.edit" onAction="#handleEditClicked"/>
+                    <MenuItem text="%menubar.edit.delete" onAction="#handleDeleteClicked"/>
                 </Menu>
-                <Menu text="%menubar-view-help">
-                    <MenuItem text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
+                <Menu text="%menubar.help">
+                    <MenuItem text="%menubar.help.about" onAction="#handleAboutMenuItemClicked"/>
                 </Menu>
             </MenuBar>
             <!-- Row 1 -->
             <ComboBox fx:id="searchAttributeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="0" maxWidth="Infinity"
-                      promptText="%search-combobox-field-text">
+                      promptText="%search.prompt.column">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxFieldStrings.id"/>
@@ -80,7 +80,7 @@
                 </items>
             </ComboBox>
             <ComboBox fx:id="searchOperatorComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"
-                      promptText="%search-combobox-comparator-text">
+                      promptText="%search.prompt.operator">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxComparatorStrings.equals"/>
@@ -89,72 +89,72 @@
                 </items>
             </ComboBox>
             <TextField fx:id="searchValueTextField" GridPane.rowIndex="1" GridPane.columnIndex="2" maxWidth="Infinity"
-                       promptText="%search-textfield-text"/>
+                       promptText="%search.prompt.value"/>
             <Button GridPane.rowIndex="1" GridPane.columnIndex="3" maxWidth="Infinity"
-                    text="%button-search-label" onAction="#handleSearchButtonClicked"/>
+                    text="%search.button.submit" onAction="#handleSearchButtonClicked"/>
             <Button GridPane.rowIndex="1" GridPane.columnIndex="4" maxWidth="Infinity"
-                    text="%button-clear-filter-label" onAction="#handleClearFilterButtonClicked"/>
+                    text="%search.button.reset" onAction="#handleClearFilterButtonClicked"/>
         </GridPane>
     </top>
     <center>
         <TableView fx:id="entityTable">
             <columns>
-                <TableColumn text="%customer-id-label">
+                <TableColumn text="%customer.label.id">
                     <cellValueFactory>
                         <PropertyValueFactory property="id"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-first-name-label">
+                <TableColumn text="%customer.label.first-name">
                     <cellValueFactory>
                         <PropertyValueFactory property="firstName"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-last-name-label">
+                <TableColumn text="%customer.label.last-name">
                     <cellValueFactory>
                         <PropertyValueFactory property="lastName"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-date-of-birth-label">
+                <TableColumn text="%customer.label.date-of-birth">
                     <cellValueFactory>
                         <PropertyValueFactory property="dateOfBirth"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-email-label">
+                <TableColumn text="%customer.label.email">
                     <cellValueFactory>
                         <PropertyValueFactory property="emailAddress"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-phone-number-label">
+                <TableColumn text="%customer.label.phone-number">
                     <cellValueFactory>
                         <PropertyValueFactory property="phoneNumber"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-street-label">
+                <TableColumn text="%customer.label.street">
                     <cellValueFactory>
                         <PropertyValueFactory property="street"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-house-number-label">
+                <TableColumn text="%customer.label.house-number">
                     <cellValueFactory>
                         <PropertyValueFactory property="houseNumber"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-zip-code-label">
+                <TableColumn text="%customer.label.zip-code">
                     <cellValueFactory>
                         <PropertyValueFactory property="zipCode"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-city-label">
+                <TableColumn text="%customer.label.city">
                     <cellValueFactory>
                         <PropertyValueFactory property="city"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-id-number-label">
+                <TableColumn text="%customer.label.id-number">
                     <cellValueFactory>
                         <PropertyValueFactory property="idNumber"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%customer-driver-license-id-label">
+                <TableColumn text="%customer.label.driver-license-id">
                     <cellValueFactory>
                         <PropertyValueFactory property="driverLicenseId"/>
                     </cellValueFactory>
@@ -163,9 +163,9 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem text="%button-new-label" onAction="#handleNewClicked"/>
-                        <MenuItem text="%button-edit-label" onAction="#handleEditClicked"/>
-                        <MenuItem text="%button-delete-label" onAction="#handleDeleteClicked"/>
+                        <MenuItem text="%menubar.edit.new" onAction="#handleNewClicked"/>
+                        <MenuItem text="%menubar.edit.edit" onAction="#handleEditClicked"/>
+                        <MenuItem text="%menubar.edit.delete" onAction="#handleDeleteClicked"/>
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -183,11 +183,11 @@
             </padding>
             <!-- Row 0 -->
             <Button GridPane.rowIndex="0" GridPane.columnIndex="0"
-                    text="%button-new-label" onAction="#handleNewClicked"/>
+                    text="%button.new" onAction="#handleNewClicked"/>
             <Button GridPane.rowIndex="0" GridPane.columnIndex="1"
-                    text="%button-edit-label" onAction="#handleEditClicked"/>
+                    text="%button.edit" onAction="#handleEditClicked"/>
             <Button GridPane.rowIndex="0" GridPane.columnIndex="2"
-                    text="%button-delete-label" onAction="#handleDeleteClicked"/>
+                    text="%button.delete" onAction="#handleDeleteClicked"/>
         </GridPane>
     </bottom>
 </BorderPane>
