--- a/src/main/resources/fxml/CarEditView.fxml
+++ b/src/main/resources/fxml/CarEditView.fxml
@@ -8,13 +8,13 @@
 <?import java.util.HashMap?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.CarEditViewController"
+            fx:controller="de.htwsaar.prog3.carrental.controller.edit.CarEditViewController"
             onKeyPressed="#handleKeyEvent">
     <top>
         <BorderPane BorderPane.alignment="CENTER">
             <left>
                 <GridPane alignment="center" hgap="10" vgap="10">
-                    <Label text="%car-edit-title-label" style="-fx-font-weight: bold" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <Label text="%car.label.edit-title" style="-fx-font-weight: bold" GridPane.columnIndex="0" GridPane.rowIndex="0">
                         <font>
                             <Font size="14.0"/>
                         </font>
@@ -28,43 +28,41 @@
     </top>
     <center>
         <GridPane alignment="center" hgap="10" vgap="10">
-            <Label text="%car-brand-label" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <Label text="%car.label.brand" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
             <TextField fx:id="brandTextField" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <Label text="%car-model-label" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <Label text="%car.label.model" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
             <TextField fx:id="modelTextField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-            <Label text="%car-category-label" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+            <Label text="%car.label.category" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
             <TextField fx:id="categoryTextField" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-            <Label text="%car-color-label" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
+            <Label text="%car.label.color" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
             <TextField fx:id="colorTextField" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-            <Label text="%car-construction-year-label" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
+            <Label text="%car.label.construction-year" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
             <TextField fx:id="constructionYearTextField" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
-            <Label text="%car-driven-distance-label" GridPane.columnIndex="5" GridPane.rowIndex="0"/>
+            <Label text="%car.label.driven-distance" GridPane.columnIndex="5" GridPane.rowIndex="0"/>
             <TextField fx:id="drivenDistanceTextField" GridPane.columnIndex="5" GridPane.rowIndex="1"/>
-            <Label text="%car-gearbox-label" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <Label text="%car.label.gearbox" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
             <fx:define>
                 <HashMap fx:id="gearboxBundle"
-                         manual="%car-gearbox-manual-label"
-                         semiautomatic="%car-gearbox-semi-automatic-label"
-                         automatic="%car-gearbox-automatic-label"/>
+                         manual="%car.label.gearbox.manual"
+                         automatic="%car.label.gearbox.automatic"/>
             </fx:define>
             <ChoiceBox fx:id="gearBoxChoiceBox" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="2">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="gearboxBundle.manual"/>
-                        <fx:reference source="gearboxBundle.semiautomatic"/>
                         <fx:reference source="gearboxBundle.automatic"/>
                     </FXCollections>
                 </items>
             </ChoiceBox>
-            <Label text="%car-horsepower-label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label text="%car.label.horsepower" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
             <TextField fx:id="horsePowerTextField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-            <Label text="%car-fuel-label" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+            <Label text="%car.label.fuel" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
             <fx:define>
                 <HashMap fx:id="fuelBundle"
-                         gasoline="%car-fuel-gasoline-label"
-                         diesel="%car-fuel-diesel-label"
-                         hybrid="%car-fuel-hybrid-label"
-                         electric="%car-fuel-electric-label"/>
+                         gasoline="%car.label.fuel.gasoline"
+                         diesel="%car.label.fuel.diesel"
+                         hybrid="%car.label.fuel.hybrid"
+                         electric="%car.label.fuel.electric"/>
             </fx:define>
             <ChoiceBox fx:id="fuelChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="3">
                 <items>
@@ -76,23 +74,23 @@
                     </FXCollections>
                 </items>
             </ChoiceBox>
-            <Label text="%car-door-count-label" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+            <Label text="%car.label.door-count" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
             <TextField fx:id="doorCountTextField" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
-            <Label text="%car-tires-label" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
+            <Label text="%car.label.tires" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
             <TextField fx:id="tiresTextField" GridPane.columnIndex="4" GridPane.rowIndex="3"/>
-            <Label text="%car-next-inspection-label" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
+            <Label text="%car.label.next-inspection" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
             <TextField fx:id="nextInspectionTextField" GridPane.columnIndex="5" GridPane.rowIndex="3"/>
-            <Label text="%car-vin-label" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <Label text="%car.label.vin" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
             <TextField fx:id="vinTextField" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-            <Label text="%car-equipment-label" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <Label text="%car.label.equipment" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
             <TextField fx:id="equipmentTextField" GridPane.columnIndex="0" GridPane.rowIndex="7" GridPane.columnSpan="6"/>
-            <Label text="%car-defects-label" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
+            <Label text="%car.label.defects" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
             <TextField fx:id="defectsTextField" GridPane.columnIndex="0" GridPane.rowIndex="9" GridPane.columnSpan="6"/>
-            <Label text="%car-licence-number-label" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
-            <TextField fx:id="licenceNumberTextField" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
-            <Label text="%car-parking-lot-label" GridPane.columnIndex="1" GridPane.rowIndex="10"/>
+            <Label text="%car.label.license-number" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
+            <TextField fx:id="licenseNumberTextField" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+            <Label text="%car.label.parking-lot" GridPane.columnIndex="1" GridPane.rowIndex="10"/>
             <TextField fx:id="parkingLotTextField" GridPane.columnIndex="1" GridPane.rowIndex="11"/>
-            <Label text="%car-daily-rate-label" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
+            <Label text="%car.label.daily-rate" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
             <TextField fx:id="dailyRateTextField" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
         </GridPane>
     </center>
@@ -100,9 +98,9 @@
         <BorderPane BorderPane.alignment="CENTER">
             <right>
                 <GridPane alignment="center" hgap="10" vgap="10">
-                    <Button mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button-cancel-label"
+                    <Button mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button.cancel"
                             textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                    <Button mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%button-apply-label"
+                    <Button mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%button.apply"
                             textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
                 </GridPane>
             </right>
