--- a/src/main/resources/fxml/EmployeeTableView.fxml
+++ b/src/main/resources/fxml/EmployeeTableView.fxml
@@ -8,20 +8,20 @@
 <?import java.util.HashMap?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController"
+            fx:controller="de.htwsaar.prog3.carrental.controller.table.EmployeeTableViewController"
             onKeyPressed="#handleKeyEvent"
             stylesheets="@styles.css">
     <fx:define>
         <HashMap fx:id="searchComboBoxFieldStrings"
-                 id="%employee-id-label"
-                 firstName="%employee-first-name-label"
-                 lastName="%employee-last-name-label"
-                 position="%employee-position-label"/>
+                 id="%employee.label.id"
+                 firstName="%employee.label.first-name"
+                 lastName="%employee.label.last-name"
+                 position="%employee.label.position"/>
     </fx:define>
     <fx:define>
         <HashMap fx:id="searchComboBoxComparatorStrings"
-                 equals="%search-combobox-equals"
-                 like="%search-combobox-like"/>
+                 equals="%search.operator.equals"
+                 like="%search.operator.contains"/>
     </fx:define>
     <top>
         <GridPane>
@@ -34,26 +34,26 @@
             </columnConstraints>
             <!-- Row 0 -->
             <MenuBar GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="5">
-                <Menu text="%menubar-view-file">
-                    <MenuItem text="%menubar-operation-cars" onAction="#handleCarMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-customers" onAction="#handleCustomerMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-employees" onAction="#handleEmployeeMenuItemClicked"/>
-                    <MenuItem text="%menubar-operation-rentals" onAction="#handleRentalMenuItemClicked"/>
+                <Menu text="%menubar.file">
+                    <MenuItem text="%menubar.file.cars" onAction="#handleCarMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.customers" onAction="#handleCustomerMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.employees" onAction="#handleEmployeeMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.rentals" onAction="#handleRentalMenuItemClicked"/>
                     <SeparatorMenuItem/>
-                    <MenuItem text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
+                    <MenuItem text="%menubar.file.close" onAction="#handleCloseMenuItemClicked"/>
                 </Menu>
-                <Menu text="%menubar-view-edit">
-                    <MenuItem text="%menubar-operation-new" onAction="#handleNewClicked"/>
-                    <MenuItem text="%menubar-operation-edit" onAction="#handleEditClicked"/>
-                    <MenuItem text="%menubar-operation-delete" onAction="#handleDeleteClicked"/>
+                <Menu text="%menubar.edit">
+                    <MenuItem text="%menubar.edit.new" onAction="#handleNewClicked"/>
+                    <MenuItem text="%menubar.edit.edit" onAction="#handleEditClicked"/>
+                    <MenuItem text="%menubar.edit.delete" onAction="#handleDeleteClicked"/>
                 </Menu>
-                <Menu text="%menubar-view-help">
-                    <MenuItem text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
+                <Menu text="%menubar.help">
+                    <MenuItem text="%menubar.help.about" onAction="#handleAboutMenuItemClicked"/>
                 </Menu>
             </MenuBar>
             <!-- Row 1 -->
             <ComboBox fx:id="searchAttributeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="0" maxWidth="Infinity"
-                      promptText="%search-combobox-field-text">
+                      promptText="%search.prompt.column">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxFieldStrings.id"/>
@@ -64,7 +64,7 @@
                 </items>
             </ComboBox>
             <ComboBox fx:id="searchOperatorComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"
-                      promptText="%search-combobox-comparator-text">
+                      promptText="%search.prompt.operator">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxComparatorStrings.equals"/>
@@ -73,32 +73,32 @@
                 </items>
             </ComboBox>
             <TextField fx:id="searchValueTextField" GridPane.rowIndex="1" GridPane.columnIndex="2" maxWidth="Infinity"
-                       promptText="%search-textfield-text"/>
+                       promptText="%search.prompt.value"/>
             <Button GridPane.rowIndex="1" GridPane.columnIndex="3" maxWidth="Infinity"
-                    text="%button-search-label" onAction="#handleSearchButtonClicked"/>
+                    text="%search.button.submit" onAction="#handleSearchButtonClicked"/>
             <Button GridPane.rowIndex="1" GridPane.columnIndex="4" maxWidth="Infinity"
-                    text="%button-clear-filter-label" onAction="#handleClearFilterButtonClicked"/>
+                    text="%search.button.reset" onAction="#handleClearFilterButtonClicked"/>
         </GridPane>
     </top>
     <center>
         <TableView fx:id="entityTable">
             <columns>
-                <TableColumn text="%employee-id-label">
+                <TableColumn text="%employee.label.id">
                     <cellValueFactory>
                         <PropertyValueFactory property="id"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%employee-first-name-label">
+                <TableColumn text="%employee.label.first-name">
                     <cellValueFactory>
                         <PropertyValueFactory property="firstName"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%employee-last-name-label">
+                <TableColumn text="%employee.label.last-name">
                     <cellValueFactory>
                         <PropertyValueFactory property="lastName"/>
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn text="%employee-position-label">
+                <TableColumn text="%employee.label.position">
                     <cellValueFactory>
                         <PropertyValueFactory property="position"/>
                     </cellValueFactory>
@@ -107,9 +107,9 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem text="%button-new-label" onAction="#handleNewClicked"/>
-                        <MenuItem text="%button-edit-label" onAction="#handleEditClicked"/>
-                        <MenuItem text="%button-delete-label" onAction="#handleDeleteClicked"/>
+                        <MenuItem text="%menubar.edit.new" onAction="#handleNewClicked"/>
+                        <MenuItem text="%menubar.edit.edit" onAction="#handleEditClicked"/>
+                        <MenuItem text="%menubar.edit.delete" onAction="#handleDeleteClicked"/>
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -127,11 +127,11 @@
             </padding>
             <!-- Row 0 -->
             <Button GridPane.rowIndex="0" GridPane.columnIndex="0"
-                    text="%button-new-label" onAction="#handleNewClicked"/>
+                    text="%button.new" onAction="#handleNewClicked"/>
             <Button GridPane.rowIndex="0" GridPane.columnIndex="1"
-                    text="%button-edit-label" onAction="#handleEditClicked"/>
+                    text="%button.edit" onAction="#handleEditClicked"/>
             <Button GridPane.rowIndex="0" GridPane.columnIndex="2"
-                    text="%button-delete-label" onAction="#handleDeleteClicked"/>
+                    text="%button.delete" onAction="#handleDeleteClicked"/>
         </GridPane>
     </bottom>
 </BorderPane>
