--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController"
+      fx:controller="de.htwsaar.prog3.carrental.controller.edit.RentalEditViewController"
       onKeyPressed="#handleKeyEvent">
     <!-- TODO i18n -->
     <Pane prefHeight="60.0" prefWidth="540.0">
@@ -29,32 +29,32 @@
         <Label fx:id="sumLabel" layoutX="332.0" layoutY="120.0"/>
     </Pane>
     <Pane layoutY="220.0" prefHeight="510.0" prefWidth="540.0">
-        <Label layoutX="30.0" layoutY="10.0" text="%customer-driver-license-id-label"/>
+        <Label layoutX="30.0" layoutY="10.0" text="%customer.label.driver-license-id"/>
         <TextField fx:id="driverLicenseIdTextField" layoutX="30.0" layoutY="30.0" prefHeight="25.0" prefWidth="150.0"/>
-        <Button layoutX="195.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSearchButtonClicked" text="%button-search-label"/>
-        <Label layoutX="30.0" layoutY="70.0" text="%customer-first-name-label"/>
+        <Button layoutX="195.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSearchButtonClicked" text="%search.button.submit"/>
+        <Label layoutX="30.0" layoutY="70.0" text="%customer.label.first-name"/>
         <TextField fx:id="firstNameTextField" layoutX="30.0" layoutY="90.0"/>
-        <Label layoutX="300.0" layoutY="70.0" text="%customer-last-name-label"/>
+        <Label layoutX="300.0" layoutY="70.0" text="%customer.label.last-name"/>
         <TextField fx:id="lastNameTextField" layoutX="300.0" layoutY="90.0"/>
-        <Label layoutX="30.0" layoutY="130.0" text="%customer-id-number-label"/>
+        <Label layoutX="30.0" layoutY="130.0" text="%customer.label.id-number"/>
         <TextField fx:id="idNumberTextField" layoutX="30.0" layoutY="150.0"/>
-        <Label layoutX="300.0" layoutY="130.0" text="%customer-date-of-birth-label"/>
+        <Label layoutX="300.0" layoutY="130.0" text="%customer.label.date-of-birth"/>
         <TextField fx:id="dateOfBirthTextField" layoutX="300.0" layoutY="150.0"/>
-        <Label layoutX="30.0" layoutY="190.0" text="%customer-zip-code-label"/>
+        <Label layoutX="30.0" layoutY="190.0" text="%customer.label.zip-code"/>
         <TextField fx:id="zipCodeTextField" layoutX="30.0" layoutY="210.0" text="0"/>
-        <Label layoutX="300.0" layoutY="190.0" text="%customer-city-label"/>
+        <Label layoutX="300.0" layoutY="190.0" text="%customer.label.city"/>
         <TextField fx:id="cityTextField" layoutX="300.0" layoutY="210.0"/>
-        <Label layoutX="30.0" layoutY="250.0" text="%customer-street-label"/>
+        <Label layoutX="30.0" layoutY="250.0" text="%customer.label.street"/>
         <TextField fx:id="streetTextField" layoutX="30.0" layoutY="270.0"/>
-        <Label layoutX="300.0" layoutY="250.0" text="%customer-house-number-label"/>
+        <Label layoutX="300.0" layoutY="250.0" text="%customer.label.house-number"/>
         <TextField fx:id="houseNumberTextField" layoutX="300.0" layoutY="270.0"/>
-        <Label layoutX="30.0" layoutY="310.0" text="%customer-email-label"/>
+        <Label layoutX="30.0" layoutY="310.0" text="%customer.label.email"/>
         <TextField fx:id="emailTextField" layoutX="30.0" layoutY="330.0"/>
-        <Label layoutX="300.0" layoutY="310.0" text="%customer-phone-number-label"/>
+        <Label layoutX="300.0" layoutY="310.0" text="%customer.label.phone-number"/>
         <TextField fx:id="phoneNumberTextField" layoutX="300.0" layoutY="330.0"/>
-        <Label layoutX="30.0" layoutY="370.0" text="%rental-note-label"/>
+        <Label layoutX="30.0" layoutY="370.0" text="%rental.label.note"/>
         <TextArea fx:id="noteTextArea" layoutX="30.0" layoutY="390.0" prefHeight="100.0" prefWidth="250.0"/>
-        <Button layoutX="300.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button-cancel-label"/>
-        <Button layoutX="401.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%button-apply-label"/>
+        <Button layoutX="300.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button.cancel"/>
+        <Button layoutX="401.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%button.apply"/>
     </Pane>
 </Pane>
